infra/kubernetes/ingress/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: unicron
spec:
  rules:
    - host: wasi.pages.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 5173
